--- a/site_web/index.html
+++ b/site_web/index.html
@@ -9,6 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Accueil</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -42,12 +45,14 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">About Us</a></li>
-                <li><a href="./classes.html">Classes</a></li>
-                <li><a href="./services.html">Services</a></li>
-                <li><a href="./team.html">Our Team</a></li>
-                <li><a href="#">Pages</a>
+                <li><a href="./index.html">Accueil</a></li>
+                <li><a href="./about-us.html">Mes mesures</a></li>
+                <li><a href="./class-details.html">Mes statistiques</a></li>
+                <li><a href="./services.html">Mon entrainenement</a></li>
+                <li><a href="./team.html">Exercices</a></li>
+                <li><a href="./team.html"></a></li>
+                <li><a href="./team.html">Exercices</a></li>
+                <li><a href="#">Photo</a>
                     <ul class="dropdown">
                         <li><a href="./about-us.html">About us</a></li>
                         <li><a href="./class-timetable.html">Classes timetable</a></li>
@@ -85,12 +90,12 @@
                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
-                            <li class="active"><a href="./index.html"></a></li>
-                            <li><a href="./about-us.html"></a></li>
-                            <li><a href="./class-details.html"></a></li>
-                            <li><a href="./services.html"></a></li>
-                            <li><a href="./team.html"></a></li>
-                            <li><a href="#"></a>
+                            <li><a href="./index.html">Accueil</a></li>
+                            <li><a href="./about-us.html">About Us</a></li>
+                            <li><a href="./class-details.html">Classes</a></li>
+                            <li><a href="./services.html">Services</a></li>
+                            <li><a href="./team.html">Our Team</a></li>
+                            <li class="active"><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About us</a></li>
                                     <li><a href="./class-timetable.html">Classes timetable</a></li>
@@ -101,7 +106,7 @@
                                     <li><a href="./404.html">404</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./contact.html"></a></li>
+                            <li><a href="./contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -165,7 +170,6 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        
                         <h2>Pousse tes limites plus loin</h2>
                     </div>
                 </div>
@@ -173,15 +177,15 @@
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
-                        <i class="fi fi-sr-chat-arrow-grow"></i>
-                        <h4>Track tes mesures</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            dolore facilisis.</p>
+                        <img src ="./svg/courbe_dapprentissage.png">
+                        <h4>Suis ton évolution</h4>
+                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+                            facilisis.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
-                        <span class="flaticon-033-juice"></span>
+                        <img src ="./svg/photo.png" >
                         <h4>Regarde ton évolution en photo</h4>
                         <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
                             facilisis.</p>
@@ -189,7 +193,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
-                        <span class="flaticon-002-dumbell"></span>
+                        <img src ="./svg/equipement_de_gym.png" >
                         <h4>Enregistre tes séances</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             dolore facilisis.</p>
@@ -203,6 +207,7 @@
                             facilisis.</p>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
@@ -316,22 +321,21 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-map-marker"></i>
-                        <p>333 Middle Winchendon Rd, Rindge,<br/> NH 03461</p>
+                        <p>83, rue de Paris<br/> <br/>93260 Les Lilas</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-mobile"></i>
                         <ul>
-                            <li>125-711-811</li>
-                            <li>125-668-886</li>
+                            <li>+33 (0)6-29-39-05-26</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text email">
                         <i class="fa fa-envelope"></i>
-                        <p>Support.gymcenter@gmail.com</p>
+                        <p>adhouen@yahoo.com</p>
                     </div>
                 </div>
             </div>
@@ -435,6 +439,10 @@
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+
 
 
 
